--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,8 +5,8 @@ tasks:
     #command: echo 'start script'
   - name: aws-cli
     # Instala las aws cli
-    before: 
-      cd ..
+    before:
+      cd /workspace
       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       unzip awscliv2.zip
       sudo ./aws/install
